XML 9.3.14 päivitys Päivitettiin käännökset vastaamaan käännöspohjan versiota 9.3.14.

--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -43,6 +43,8 @@
   <string name="abc_shareactionprovider_share_with">Jakaminen:</string>
   <string name="abc_shareactionprovider_share_with_application">Jaa sovelluksessa %s</string>
   <string name="abc_toolbar_collapse_description">Kutista</string>
+  <string name="accessbility_suggestion_dropdown_closed">Ehdotuksia ei saatavilla</string>
+  <string name="accessbility_suggestion_dropdown_opened">Yhteystietojen ehdotukset avattiin</string>
   <string name="accessibility_add_attendee">Lisää osallistuja</string>
   <string name="accessibility_add_reminder">Lisää muistutus</string>
   <string name="accessibility_all_day">Koko päivän tapahtuma</string>
@@ -58,11 +60,12 @@
   <string name="account_and_calendar">Tilit</string>
   <string name="acessibility_cal_notification">Kalenteri-ilmoitus</string>
   <string name="action_bar_return">Takaisin</string>
+  <string name="action_label">Takaisin</string>
   <string name="action_text_card_manager">Kanava</string>
   <string name="add_anniversary">Lisää vuosipäivä</string>
   <string name="add_countdown">Lisää laskenta</string>
   <string name="add_event">Lisää tapahtuma</string>
-  <string name="address">地址</string>
+  <string name="address">Osoite</string>
   <string name="agenda_month_empty_hint">Ei tapahtumia tänään</string>
   <string name="agenda_tomorrow">HUOMENNA, %1$s</string>
   <string name="agenda_view">Tapahtumat</string>
@@ -105,9 +108,9 @@
   <string name="card_manager_no_data">Ei tilauksia vielä</string>
   <string name="card_title_change">Lisää</string>
   <string name="change_response_title">Muuta vastausta</string>
-  <string name="check_reminded_text">查看</string>
-  <string name="chinese_leap">闰</string>
-  <string name="chongsha">冲煞</string>
+  <string name="chips_action_cancel">Peruuta</string>
+  <string name="chips_action_copy">Kopioi</string>
+  <string name="chips_permission_text">Salli yhteystietojen ehdotukset</string>
   <string name="close_alarm">Poista käytöstä</string>
   <string name="copy_email">Kopioi sähköpostiosoite</string>
   <string name="copy_number">Kopioi puhelinnumero</string>
@@ -122,14 +125,7 @@
   <string name="creating_event">Tapahtuma luotu.</string>
   <string name="creating_event_with_guest">Lähetetään kutsuja…</string>
   <string name="credit">信用卡</string>
-  <string name="credit_card_date_label">还款日：</string>
-  <string name="credit_card_number_label">卡号：</string>
-  <string name="credit_currency">元</string>
-  <string name="credit_detail_amount_label">应还</string>
-  <string name="credit_detail_sms_content">短信原文</string>
-  <string name="credit_detail_today">今日：</string>
-  <string name="credit_event_delete_successfully">信用卡还款事件删除成功</string>
-  <string name="credit_event_title">信用卡账单</string>
+  <string name="credit_detail_sms_content">Tekstiviestien sisällöt</string>
   <string name="daily">Päivittäin</string>
   <string name="date_calculate">Laske päiväys</string>
   <string name="date_calculate_days">Syötä päivien määrä</string>
@@ -153,15 +149,10 @@
   <string name="delete_this_event_title">Poistetaanko tämä tapahtuma?</string>
   <string name="description_calendar">Järjestelmäsovellukset/Kalenteri</string>
   <string name="description_calendar_edit_event">Järjestelmäsovellukset/Kalenteri/Agenda</string>
-  <string name="description_calendar_huangli"/>
-  <string name="description_calendar_subscribe_group"/>
   <string name="directory_searching_fmt">Haetaan %s…</string>
   <string name="discard_label">Peruuta</string>
   <string name="does_not_repeat">Yksittäinen tapahtuma</string>
-  <string name="done">Takaisin</string>
-  <string name="download">下载</string>
-  <string name="downloading">下载中</string>
-  <string name="downloading_wallpaper">原图下载中</string>
+  <string name="dropdown_delete_button_desc">Poista %s vastaanottajista</string>
   <string name="edit_date_calculate_days_backward_error_hint">Eteenpäin ei voi laskea</string>
   <string name="edit_date_calculate_days_empty_hint">Syötä päivien lukumäärä</string>
   <string name="edit_date_calculate_days_forward_error_hint">Taaksepäin ei voi laskea</string>
@@ -182,8 +173,8 @@
   <string name="edit_event_label">Tiedot</string>
   <string name="edit_event_no_reminder_value">Älä muistuta</string>
   <string name="edit_event_reminder_3_days_before">Muistuta myös kolme päivää ennen</string>
-  <string name="edit_event_reminder_summary">Sinä päivänä klo %1$s</string>
-  <string name="edit_event_reminder_summary_3_days_before">Kolme päivää ennen ja sinä päivänä klo %1$s</string>
+  <string name="edit_event_reminder_summary">Samana päivänä klo %1$s</string>
+  <string name="edit_event_reminder_summary_3_days_before">Kolme päivää ennen ja samana päivänä klo %1$s</string>
   <string name="edit_event_reminder_text">%1$s päivänä klo %2$s</string>
   <string name="edit_event_reminder_time">Muistutuksen aika</string>
   <string name="edit_event_reminder_with_another_day_text">%1$s päivänä, %2$s klo %3$s</string>
@@ -227,49 +218,28 @@
   <string name="event_info_when">Milloin</string>
   <string name="event_info_where">Missä</string>
   <string name="event_lunar_month">月</string>
-  <string name="event_reminder_allday_day_zero">Sinä päivänä klo %2$s</string>
+  <string name="event_reminder_allday_day_zero">Samana päivänä klo %2$s</string>
   <string name="event_reminder_value_zero">Ennen tapahtumaa</string>
   <string name="event_title">Otsikko</string>
   <string name="event_view">Näytä tapahtuma</string>
   <string name="every_weekday">Joka arkipäivä (Ma–Pe)</string>
   <string name="festival_detail_title">Festivaali</string>
-  <string name="flight_check_in">航班值机</string>
-  <string name="flight_check_in_done">已值机</string>
-  <string name="flight_check_in_now">立即值机</string>
-  <string name="flight_detail_tips">更多飞机行程服务推荐使用：%1$s</string>
-  <string name="flight_detail_tips_url">飞常准</string>
-  <string name="flight_detail_title">飞机行程</string>
-  <string name="flight_disclaimer">免责声明</string>
-  <string name="flight_disclaimer_content">航班数据和服务由飞常准提供。相关服务和责任将由该第三方承担，如有问题请咨询该公司客服。同时，相关航班信息仅供参考，请以乘坐航空公司发布信息为准。</string>
-  <string name="flight_disclaimer_dialog_ok">知道了</string>
-  <string name="flight_event_delete_successfully">飞机行程删除成功</string>
-  <string name="flight_plan_time">计划%1$s</string>
-  <string name="flight_seat_no">座位%1$s</string>
-  <string name="flight_state">航班状态</string>
-  <string name="flight_time">实际%1$s</string>
-  <string name="fortune_birthday">生日</string>
-  <string name="fortune_card_caiwei">财位：</string>
-  <string name="fortune_card_set_bazi">设置生辰八字</string>
-  <string name="fortune_card_taohua">桃花：</string>
-  <string name="fortune_card_working">事业学业运势：</string>
-  <string name="fortune_card_zhengchong">正冲：</string>
-  <string name="fortune_gender">性别</string>
-  <string name="fortune_label">每日运势</string>
-  <string name="fortune_name">称呼</string>
-  <string name="fortune_name_hint">请输入</string>
-  <string name="fortune_no_name">请填写称呼</string>
-  <string name="fortune_setting_tips">设置您的生辰后,可获取您的专属运势。每日黄历运势、财位、桃花、正冲等信息全掌握</string>
-  <string name="free_day_default_banner_title">尽情享受美好假期吧！</string>
+  <string name="flight_check_in">Ilmoittaudu</string>
+  <string name="flight_check_in_done">Ilmoittauduttiin</string>
+  <string name="flight_check_in_now">Ilmoittaudu nyt</string>
+  <string name="flight_detail_tips">Lisää lentoon liittyviä palveluita: %1$s</string>
+  <string name="flight_detail_tips_url">VariFlight</string>
+  <string name="flight_detail_title">Lento-ohjelma</string>
+  <string name="flight_disclaimer">Vastuuvapauslauseke</string>
+  <string name="flight_disclaimer_dialog_ok">Selvä</string>
+  <string name="flight_event_delete_successfully">Poistettiin lento-ohjelma onnistuneesti</string>
+  <string name="flight_plan_time">Lähtöaika %1$s</string>
+  <string name="flight_seat_no">Istumapaikka %1$s</string>
+  <string name="flight_state">Lennon tila</string>
+  <string name="flight_time">Arvioitu saapuminen %1$s</string>
   <string name="from_google_group_calendar">Google kalenteri</string>
   <string name="gadget_no_events">Ei tulevia kalenteritapahtumia</string>
   <string name="gadget_title">Kalenteri</string>
-  <string name="gas_amount_label">用气量</string>
-  <string name="gas_bill_event_title">燃气缴费：</string>
-  <string name="gas_cost_label">需缴费</string>
-  <string name="gas_detail_name">户号：%1$s</string>
-  <string name="gas_detail_title">燃气缴费</string>
-  <string name="gas_event_delete_successfully">燃气缴费事件删除成功</string>
-  <string name="gas_interval_label">计费时段</string>
   <string name="global_action_text_card_manager">Lisää kategorioita</string>
   <string name="global_cricket_no_match">Yhtään krikettiottelua ei ole tälle päivälle. Tarkista muut päivät.</string>
   <string name="global_football_final">FINAALI</string>
@@ -283,19 +253,9 @@
   <string name="hint_where">Sijainti</string>
   <string name="holiday_card_title">Juhlapyhä</string>
   <string name="holiday_detail_read_more">Lisää</string>
-  <string name="homepage_nowadays">今天</string>
-  <string name="homepage_today">今</string>
-  <string name="horoscope_card_comprehensive">综合运势：</string>
-  <string name="horoscope_card_financial">财富运势：</string>
-  <string name="horoscope_card_love">爱情运势：</string>
-  <string name="horoscope_card_set_bazi">点击设置星座运势</string>
-  <string name="horoscope_card_working">事业运势：</string>
   <string name="horoscope_select_activity_label">Valitse horoskooppi</string>
-  <string name="hotel_detail_title">酒店信息</string>
-  <string name="hotel_event_delete_successfully">酒店事件删除成功</string>
-  <string name="hotel_event_title">入住酒店：</string>
-  <string name="huangli_bad_type">忌</string>
-  <string name="huangli_good_type">宜</string>
+  <string name="hotel_detail_title">Hotellin tiedot</string>
+  <string name="hotel_event_delete_successfully">Hotellin varaus poistettiin onnistuneesti</string>
   <string name="import_action">Tuo</string>
   <string name="import_birthday">Tuo syntymäpäivä</string>
   <string name="imported">Tuotu</string>
@@ -307,67 +267,15 @@
   <string name="insert_event_toast_add_success">Tapahtuma luotu</string>
   <string name="install_email_app">Asenna Sähköposti</string>
   <string name="install_email_finished">Asennettiin onnistuneesti</string>
-  <string name="install_weather_app_error">应用加载失败.</string>
-  <string name="install_weather_app_loading">加载中...</string>
   <string name="installing_email">Asennetaan…</string>
   <string name="item_num_selected">%1$d valittu</string>
-  <string name="joke_card_click_toast">长按可复制笑话</string>
-  <string name="joke_card_icon_text">%1$s人笑过</string>
-  <string name="joke_card_long_click_toast">已复制，长按输入框即可粘贴</string>
-  <string name="joke_card_paste_suffix">【来自小米日历】</string>
   <string name="jump_date_full">Siirry päivämäärään</string>
-  <string name="life_assistant_group_title">生活助手</string>
-  <string name="life_card_credit_primary">信用卡还款（尾号%1$s）</string>
-  <string name="life_card_credit_primary_no_account">信用卡还款</string>
-  <string name="life_card_credit_secondary">还款日：%1$s  |  最后%2$s天</string>
-  <string name="life_card_credit_secondary_no_countdown">还款日：%1$s</string>
-  <string name="life_card_credit_secondary_overdue">还款日：%1$s  |  已过期</string>
-  <string name="life_card_electricity_bill_primary">电费缴费（户号%1$s）</string>
-  <string name="life_card_electricity_bill_primary_no_account">电费缴费</string>
-  <string name="life_card_gas_bill_primary">燃气缴费（户号%1$s）</string>
-  <string name="life_card_gas_bill_primary_no_account">燃气缴费</string>
-  <string name="life_card_gas_bill_secondary">今天</string>
-  <string name="life_card_loan_primary">贷款还款（%1$s）</string>
-  <string name="life_card_loan_primary_no_bank">贷款还款</string>
-  <string name="life_card_title">生活提醒</string>
-  <string name="limit">限行</string>
-  <string name="limit_after_tomorrow">后天</string>
-  <string name="limit_card_limit_desc">限行尾号</string>
-  <string name="limit_card_no_limit_data_desc">暂无限行数据</string>
-  <string name="limit_card_no_limit_rule">暂无限行规则数据</string>
-  <string name="limit_card_not_limit_desc">今日不限行</string>
-  <string name="limit_card_number_label">您的爱车尾号</string>
-  <string name="limit_card_preview_desc">订阅并设置限行提醒后更新数据</string>
-  <string name="limit_card_set_reminder">设置提醒</string>
-  <string name="limit_city_label">城市选择</string>
-  <string name="limit_no_city">无城市数据</string>
-  <string name="limit_notification_date_format">M月d日(EE)</string>
-  <string name="limit_notification_text">%1$s%2$s限行尾号:%3$s</string>
-  <string name="limit_notification_title">您的爱车今日限行</string>
-  <string name="limit_reminder_switch_label">限行提醒</string>
-  <string name="limit_reminder_time_label">提醒时间</string>
-  <string name="limit_rule">限行规则</string>
-  <string name="limit_select_city">请选择城市</string>
-  <string name="limit_setting_label">车辆限行提醒设置</string>
-  <string name="limit_setting_tips">开启并设置提醒后，你的爱车当天限行时你会收到日历的限行提醒。非数字尾号设置说明：%1$s</string>
-  <string name="limit_setting_tips_url">点击查看</string>
-  <string name="limit_today">今天</string>
-  <string name="limit_tomorrow">明天</string>
-  <string name="live_text">直播</string>
-  <string name="living_text">直播中</string>
   <string name="load_more_hint">Lataa tapahtumat %1$d ajalta</string>
   <string name="loading">Ladataan…</string>
-  <string name="loan">贷款还款</string>
-  <string name="loan_event_delete_successfully">贷款还款事件删除成功</string>
-  <string name="loan_event_title">贷款账单</string>
   <string name="local_calendar_display_name">Paikallinen kalenteri</string>
   <string name="local_owner_account_name">Tallennetaan tähän laitteeseen</string>
   <string name="login_failed_toast">Kirjautuminen epäonnistui, päivitä ja yritä uudelleen</string>
   <string name="lunar_date">Lunar date</string>
-  <string name="lunar_day"/>
-  <string name="lunar_to_solar"/>
-  <string name="match_ed">已结束</string>
-  <string name="match_not_started">未开始</string>
   <string name="match_select_activity_label">Liigat</string>
   <string name="menu_general_preferences">Yleiset asetukset</string>
   <string name="menu_reminder_preferences">Muistutukset</string>
@@ -408,10 +316,8 @@
   <string name="month_view">Kuukausi</string>
   <string name="monthly">Kuukausittain</string>
   <string name="monthly_on_day">Kuukausittain (samana päivänä joka kuukausi)</string>
-  <string name="more_match">更多赛事</string>
-  <string name="more_string">+%1$s</string>
-  <string name="movie_event_delete_successfully">电影票事件删除成功</string>
-  <string name="movie_event_title">电影：</string>
+  <string name="monthly_on_day_count">Kuukausittain (%1$s %2$s joka kuukausi)</string>
+  <string name="movie_event_delete_successfully">Poistettiin elokuvalippu onnistuneesti</string>
   <string name="network_not_available">Verkkoyhteyttä ei voi muodostaa</string>
   <string name="new_event_description">Uusi</string>
   <string name="no_contact_birthday_hint">Ei tuotavia syntymäpäiviä</string>
@@ -450,10 +356,10 @@ Tarkista verkkoyhteys ja yritä uudelleen."</string>
   <string name="panchang_vikram_samvat">Vikram Samvat</string>
   <string name="panchang_yamaghanta">Yamaghanta</string>
   <string name="panchang_yog">Yog</string>
-  <string name="passenger">乘机人</string>
+  <string name="passenger">Matkustaja</string>
   <string name="path_calendar_settings">Järjestelmäsovellukset/Kalenteri/Asetukset</string>
   <string name="pengzu">彭祖</string>
-  <string name="phone_num">电话</string>
+  <string name="phone_num">Puhelin</string>
   <string name="prefDialogTitle_vibrateWhen">Värinä</string>
   <string name="pref_reminder_time">Muistutuksen aika</string>
   <string name="pref_title_alarm_remind">Muistuta hälytyksellä</string>
@@ -486,10 +392,9 @@ Tarkista verkkoyhteys ja yritä uudelleen."</string>
   <string name="recommend_card_close_hint">将为您减少类似订阅推荐</string>
   <string name="refresh">Päivitä</string>
   <string name="refreshing_hint">Odota hetki…</string>
-  <string name="reminder_overdue">已过期</string>
+  <string name="reminder_overdue">Vanhentunut</string>
   <string name="repeat_activity_label">Toisto</string>
   <string name="repeat_custom_activity_label">Oma valinta</string>
-  <string name="repeat_custom_prompt">joka %1$s - %2$s</string>
   <string name="repeat_custom_prompt_daily">joka %1$s</string>
   <string name="repeat_custom_prompt_sentence">Tapahtuma toistuu %1$s</string>
   <string name="repeat_custom_prompt_splitter">", "</string>
@@ -619,12 +524,12 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="too_long_description">Tapahtuman kuvaus on liian pitkä</string>
   <string name="too_long_location">Tapahtuman sijainti on liian pitkä</string>
   <string name="too_long_name">Nimi on liian pitkä</string>
-  <string name="train_detail_title">火车行程</string>
+  <string name="train_detail_title">Junaohjelma</string>
   <string name="train_event_add_arrive_station">Lisää määränpää napauttamalla</string>
   <string name="train_event_arrive">Saapuu klo %1$s</string>
   <string name="train_event_arrive_station_saved">Tallennettiin määränpää onnistuneesti</string>
   <string name="train_event_choose_arrive_station">Valitse määränpää</string>
-  <string name="train_event_delete_successfully">火车行程删除成功</string>
+  <string name="train_event_delete_successfully">Junaohjelma poistettiin onnistuneesti</string>
   <string name="train_event_depart">Lähtee klo %1$s</string>
   <string name="train_event_disclaimer">Vastuuvapauslauseke: Kaikki junista ja palveluista saadut tiedot tarjoaa rautatieyhtiö. Ole yhteydessä rautatieyhtiön asiakaspalveluun, jos sinulla on jotain kysyttävää. Junatiedot ovat vain viitteellisiä. Tutustu rautatieyhtiön virallisiin verkkosivuihin uusimpien päivityksien ja tietojen saamiseksi.</string>
   <string name="train_event_error_toast">Tietoja ei voitu ladata</string>
@@ -641,7 +546,6 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="train_event_station_time_format">HH:mm</string>
   <string name="travel_airport">Lentokenttä</string>
   <string name="travel_carriage_number_text">Auto</string>
-  <string name="travel_eta_advice">%2$s minuutin ajomatka kohteeseen %1$s.</string>
   <string name="travel_ets_advice">Aja kohteeseen %2$s ennen %1$s.</string>
   <string name="travel_event_add_successfully">Tapahtuma luotu</string>
   <string name="travel_event_title_flight">Lento: %1$s-%2$s %3$s</string>
