--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/strings.xml
@@ -33,6 +33,17 @@
   <string name="account_unactivated">Tili ei ole aktivoitu</string>
   <string name="ad_app_download_start">Aloitetaan latausta…</string>
   <string name="ad_app_is_downloading">Ladataan…</string>
+  <string name="ad_begin_to_download_tip">Aloitetaan latausta…</string>
+  <string name="ad_begin_to_install_tip">Asennetaan…</string>
+  <string name="ad_closed_tip">Näet vähemmän tämänkaltaisia mainoksia</string>
+  <string name="ad_download_download">Lataa</string>
+  <string name="ad_download_download_now">Lataa</string>
+  <string name="ad_download_install">Asenna</string>
+  <string name="ad_download_open">Avaa</string>
+  <string name="ad_download_pause">Pysäytä</string>
+  <string name="ad_download_pending">Odottaa</string>
+  <string name="ad_download_resume">Jatka</string>
+  <string name="ad_downloading_tip">Tätä kohdetta ladataan. Voit katsoa edistymisen Ilmoitusalueelta.</string>
   <string name="add_resource_detail_fail">Lähdettä ei voi lisätä</string>
   <string name="all_resources">Kaikki</string>
   <string name="app_ad_title">Päivittäiset Suositukset</string>
@@ -83,13 +94,15 @@
   <string name="description_uploadtime">Päivitä</string>
   <string name="description_version">Versio</string>
   <string name="description_version_szie">Versio: %1$s Koko: %2$s</string>
+  <string name="desktop_effects">Aloitusnäytön tehosteet</string>
   <string name="desktop_wallpaper">Aloitusnäyttö</string>
-  <string name="detail_recommend_title">Suositeltu</string>
+  <string name="detail_recommend_title">Saatat pitää näistä</string>
   <string name="dev_options">Kehittäjäasetukset</string>
   <string name="dev_options_summary">Verkkolähteet</string>
   <string name="download_failed">Lataaminen epäonnistui</string>
   <string name="download_preview_failed">Esikatselun lataaminen epäonnistui</string>
   <string name="download_success">Lataus valmistui</string>
+  <string name="dynamic_video_wallpaper">24H taustakuva</string>
   <string name="exit_extreme_mode_dialog_agree">Hyväksy</string>
   <string name="exit_extreme_mode_dialog_cancel">Peruuta</string>
   <string name="exit_extreme_mode_dialog_title">Poista Äärimmäinen tila käytöstä</string>
@@ -129,8 +142,10 @@
   <string name="fail_to_add_account">Tilin lisääminen epäonnistui</string>
   <string name="favorite_list">Suosikit</string>
   <string name="favorite_list_format">Suosikki %1$s</string>
+  <string name="find_more_font">Hae lisää</string>
   <string name="find_more_theme">Hae lisää</string>
   <string name="find_more_wallpapers">Hae lisää</string>
+  <string name="float_wallpaper_is_here">Läpinäkyvä taustakuva</string>
   <string name="gift_anonymous">Anonyymi</string>
   <string name="gift_operation_fail_dlg_abandon">Peruuta</string>
   <string name="gift_operation_fail_dlg_retry">Yritä uudelleen</string>
@@ -171,15 +186,28 @@
   <string name="home_apply_failured">Aloitusnäytön taustakuvaa ei voi asettaa</string>
   <string name="home_apply_success">Aloitusnäytön taustakuva asetettu</string>
   <string name="in_the_end">Ei enempää näytettäviä kohteita</string>
+  <string name="incall_show_apply">Profiilivideo lähteville puheluille</string>
+  <string name="incall_show_apply_fail">Ei voitu asettaa</string>
+  <string name="incall_show_apply_success">"Asetettiin onnistuneesti. Poistaaksesi tämän ominaisuuden käytöstä,
+siirry Asetukset &gt; Ääni ja värinä &gt; Profiilivideo."</string>
+  <string name="incall_show_apply_success_without_ringtone">"Asetettiin onnistuneesti. Tällä videolla ei ole ääntä. Alkuperäistä soittoääntä käytetään.
+Poistaaksesi tämän ominaisuuden käytöstä, siirry Asetukset &gt; Ääni ja värinä &gt; Profiilivideo."</string>
+  <string name="incall_show_find_more">Etsi lisää</string>
+  <string name="incall_show_not_set">Ei profiilivideoita</string>
+  <string name="incall_show_remove">Poista profiilivideo</string>
+  <string name="incall_show_remove_dialog_message">Olet jo asettanut profiilivideon lähteville puheluille. Poistetaanko video nyt?</string>
+  <string name="incall_show_remove_success">Poistettiin profiilivideo onnistuneesti</string>
+  <string name="incall_show_title">Profiilivideot</string>
   <string name="incompatible_dialog_cancel">Älä aseta</string>
   <string name="incompatible_dialog_message">Tämä teema ei ole yhteensopiva laitteellesi asennetun MIUI-version kanssa. Jotkut osat MIUI:ssa ei välttämättä toimi oikein jos asetat tämän teeman.</string>
   <string name="incompatible_dialog_ok">Selvä</string>
   <string name="incompatible_dialog_title">Yhteensopivuusongelmia</string>
   <string name="is_setting_wallpaper_message">Asetetaan taustakuvaa…</string>
   <string name="item_resource_audio_optional_alarm_ring">Herätykset</string>
-  <string name="item_resource_audio_optional_color_ring">Ringback tone</string>
+  <string name="item_resource_audio_optional_color_ring">Takaisinsoittoääni</string>
   <string name="item_resource_audio_optional_notification_ring">Ilmoitukset</string>
   <string name="item_resource_audio_optional_phone_ring">Soittoääni</string>
+  <string name="lab">Beta-ominaisuudet</string>
   <string name="live_wallpaper">Live taustakuva</string>
   <string name="loading">Odota hetki…</string>
   <string name="loading_resource_detail_fail">Lähdettä ei voi ladata</string>
@@ -219,6 +247,12 @@
   <string name="miuishare_title_share">Jaa</string>
   <string name="miuishare_wechat_timeline_title">WeChat Hetket</string>
   <string name="miuishare_weibo_title">Weibo</string>
+  <string name="mix_global_option">Yleinen</string>
+  <string name="mix_global_option_des">Ilmoitusalue, Puhelin, Viestit, ja muut järjestelmän elementit. Poista valinta käyttääksesi oletusvalintoja.</string>
+  <string name="mix_home_option_des">Taustakuva ja kello. Poista valinta käyttääksesi oletusvalintoja.</string>
+  <string name="mix_icons_option_des">Aloitusnäytön kuvakkeet. Poista valinta käyttääksesi oletusvalintoja.</string>
+  <string name="mix_lockscreen_option_des">Taustakuva ja kello. Poista valinta käyttääksesi oletusvalintoja.</string>
+  <string name="mix_tip">Teeman komponentit</string>
   <string name="multi_sim_ringtone_settings_dialog_message">Soittoääni asetetaan molemmille SIM-korteille.</string>
   <string name="multi_sim_ringtone_settings_dialog_ok">Selvä</string>
   <string name="multi_sim_ringtone_settings_dialog_remind_never">Älä näytä uudelleen</string>
@@ -242,6 +276,7 @@
   <string name="online_search_hint">Etsi verkkolähteitä</string>
   <string name="password_toggle_content_description">Vaihda salasanan näkyvyys</string>
   <string name="pref_privacy_policy">Tietosuojakäytäntö</string>
+  <string name="present_local_fonts">Fonttini</string>
   <string name="present_local_themes">Teemani</string>
   <string name="present_local_themes_subtitle">Mukauta laitteesi</string>
   <string name="present_official_themes">Meidän valinnat</string>
@@ -371,8 +406,6 @@
   <string name="resource_expand_full_text">Laajenna</string>
   <string name="resource_failed_to_load_list">Teemojen lataaminen epäonnistui.</string>
   <string name="resource_free_download">Lataa ilmaiseksi</string>
-  <string name="resource_free_trial_15_days">Kokeile 15 päivää ilmaiseksi</string>
-  <string name="resource_free_use_last_one_day">Kokeiluaikasi päättyy huomenna.</string>
   <string name="resource_get_auth_checking">Varmennetaan…</string>
   <string name="resource_get_auth_exceed_max_limit_tips">10 laitetta on jo valtuutettu tälle laitteelle</string>
   <string name="resource_get_auth_exceed_max_limit_title">Valtuutettujen laitteiden määrä on ylitetty</string>
@@ -396,7 +429,6 @@
   <string name="resource_no_result">Tuloksia ei löytynyt</string>
   <string name="resource_notification_default">Ilmoitukset</string>
   <string name="resource_on_trial">Kokeilu: %1$s</string>
-  <string name="resource_on_use">Käytetään: %1$s</string>
   <string name="resource_online">Online</string>
   <string name="resource_online_picker">Valitse online-soittoääni</string>
   <string name="resource_pack_confirm">Vaikka olet jo ostanut %1$d osaa tästä teemasta, on silti halvempaa ostaa koko teema.</string>
@@ -452,11 +484,11 @@
   <string name="resource_title_rank">Suosituimmat</string>
   <string name="resource_title_select_ringtone">Valitse ääni</string>
   <string name="resource_title_subject">Kiinnostavat</string>
-  <string name="resource_trial_15_days_end_title">15 päivän kokeilujakso päättyi</string>
-  <string name="resource_trial_15_days_immediately">Kokeile 15 päivää heti</string>
   <string name="resource_trial_days">(kokeilu: %1$d pv)</string>
   <string name="resource_trial_days_hours">(kokeilu: %1$d pv %2$d t)</string>
-  <string name="resource_trial_end_change">Muuta</string>
+  <string name="resource_trial_end_checkbox_hint">Vastaanota Mi Krediittejä ensin</string>
+  <string name="resource_trial_end_get_mibi">Vastaanota Mi Krediittejä</string>
+  <string name="resource_trial_end_jump_hint">Uudelleenohjataan…</string>
   <string name="resource_trial_end_message">Kokeiluaika %1$s vanhentunut. Voit ostaa sen, jos tykkäsit siitä.</string>
   <string name="resource_trial_end_purchase">Osta</string>
   <string name="resource_trial_end_restore">Lopeta kokeilu</string>
@@ -484,6 +516,7 @@
   <string name="selected_resource_file_invalid">Valittua lähteen tiedostoa ei voi käyttää</string>
   <string name="server_internal_error">Tapahtui palvelinvirhe. Odota minuutti tai kaksi ja yritä uudelleen.</string>
   <string name="set_color_ring_back_tone">Aseta mukautettu soittoääni</string>
+  <string name="set_home_wallpaper_failed">%s. Aloitusnäytön taustakuvaa ei voi asettaa.</string>
   <string name="settings">Asetukset</string>
   <string name="shortcut_add">Lisää</string>
   <string name="shortcut_cancel">Ei kiitos</string>
@@ -511,6 +544,8 @@
   <string name="theme_changed_failed_message">Teemaa ei voitu asettaa</string>
   <string name="theme_changed_message">Teema asetettu</string>
   <string name="theme_changing_dialog_title">"Asetetaan "</string>
+  <string name="theme_comment_dialog_message">Arvostele tämä sovellus ja kerro mitä olet mieltä.</string>
+  <string name="theme_comment_dialog_ok">Arvostele</string>
   <string name="theme_component_title_alarm">Herätys</string>
   <string name="theme_component_title_alarmstyle">Herätyksen tyyli</string>
   <string name="theme_component_title_all">Teemat</string>
@@ -521,6 +556,7 @@
   <string name="theme_component_title_contact">Numeron valintanäppäimistö</string>
   <string name="theme_component_title_font">Fontti</string>
   <string name="theme_component_title_framework">Reunukset</string>
+  <string name="theme_component_title_homepage">Koti</string>
   <string name="theme_component_title_icon">Kuvakkeet</string>
   <string name="theme_component_title_launcher">Käynnistin</string>
   <string name="theme_component_title_lockstyle">Lukituksen tyyli</string>
@@ -558,6 +594,8 @@
   <string name="theme_purchased_non_local">Online</string>
   <string name="theme_select_others">Selaa</string>
   <string name="theme_setting">Asetukset</string>
+  <string name="theme_staggered_item_text">Vastaanota Mi Krediittejä</string>
+  <string name="theme_to_comment">Ei huono!</string>
   <string name="theme_user_agreement_allow">Hyväksy</string>
   <string name="theme_user_agreement_content1">"Käyttämällä tätä tuotetta, hyväksyt meidän "</string>
   <string name="theme_user_agreement_content2">Käyttöehdot</string>
@@ -574,6 +612,7 @@
   <string name="tips_theme_gate_transfer_fail">Tätä sivua ei voitu avata. Odota minuutti tai kaksi ja yritä uudelleen.</string>
   <string name="title_component">Mukauta teema</string>
   <string name="title_my_audio_resource">Soittoääneni</string>
+  <string name="title_my_miwallpaper_desktop_effects">Aloitusnäytön tehosteet</string>
   <string name="title_my_miwallpaper_resource">Live taustakuvani</string>
   <string name="title_my_miwallpaper_video_file_resource">Taustakuvaelokuvani</string>
   <string name="title_my_wallpaper_resource">Taustakuvani</string>
@@ -581,6 +620,15 @@
   <string name="title_system_audio_resource">Järjestelmän soittoäänet</string>
   <string name="title_system_wallpaper_resource">Järjestelmän taustakuvat</string>
   <string name="to_activate_the_account">Aktivoi Mi Tilisi nyt</string>
+  <string name="transparent_wallpaper">Läpinäkyvä taustakuva</string>
+  <string name="transparent_wallpaper_apply_success">Asetettiin onnistuneesti. Voit poistaa tämän ominaisuuden käytöstä asetuksista Teemat &gt; Profiili &gt; Beta-ominaisuudet.</string>
+  <string name="transparent_wallpaper_enable_success">Otettiin käyttöön onnistuneesti</string>
+  <string name="transparent_wallpaper_guide">Siirry Teemoihin</string>
+  <string name="transparent_wallpaper_guide_tip">Voit valita läpinäkyvän taustakuvan Teemoissa nyt.</string>
+  <string name="transparent_wallpaper_white_wallpaper">Tee taustasta valkoinen</string>
+  <string name="transparent_wallpaper_white_wallpaper_failed">Taustasta ei voitu tehdä valkoista</string>
+  <string name="transparent_wallpaper_white_wallpaper_success">Tausta on nyt valkoinen</string>
+  <string name="transparent_wallpaper_white_wallpaper_tip">Läpinäkyvä taustakuva näyttää parhaalta valkoisella taustalla</string>
   <string name="uid_change_dialog_message">Olet poistanut päivitykset. Käynnistä laite uudelleen, jotta voit käyttää teemoja.</string>
   <string name="uid_change_dialog_ok">Selvä</string>
   <string name="uid_change_dialog_title">Käynnistä laite</string>
@@ -602,8 +650,7 @@
   <string name="video_data_tips_message">Mobiilidatan käyttäminen voi aiheuttaa lisäkustannuksia. Jatketaanko siitä huolimatta?</string>
   <string name="video_data_tips_title">Tiedonsiirtovaroitus</string>
   <string name="video_silence_apply_success">Määritettiin video ilman ääntä onnistuneesti</string>
-  <string name="vip_level_dialog_positive">我知道了</string>
-  <string name="vip_level_dialog_title">温馨提示</string>
+  <string name="video_wallpaper_import">Lisää kohteita napauttamalla</string>
   <string name="wallpaper_apply">Aseta</string>
   <string name="wallpaper_crop">Rajaa</string>
   <string name="wallpaper_decoded_error">Taustakuvan lataaminen epäonnistui</string>
@@ -611,6 +658,7 @@
   <string name="wallpaper_scroll_type_tips">Taustakuvan vierintä</string>
   <string name="wallpaper_set_as_both">Aseta molempiin</string>
   <string name="wallpaper_set_as_desktop">Aseta Aloitusnäytölle</string>
+  <string name="wallpaper_set_as_float_wallpaper">Läpinäkyvä taustakuva (Beta)</string>
   <string name="wallpaper_set_as_lockscreen">Aseta Lukitusnäytölle</string>
   <string name="wallpaper_settings">Taustakuvan asetukset</string>
   <string name="wallpaper_settings_loading_text">Odota hetki…</string>
