--- a/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Cit.apk/res/values-fi-rFI/strings.xml
@@ -354,6 +354,10 @@ Jos se on ultraääniläheisyysanturi, simuloi toimintoa nostamalla puhelin test
   <string name="cit_reset_check_summary">Tämä testi käynnistää laitteen uudelleen. Kaikki edellisen testin tiedot menetetään.</string>
   <string name="cit_reset_check_title">Uudelleenkäynnistystesti</string>
   <string name="cit_reset_test">Testaa</string>
+  <string name="cit_reverse_charge_check_summary">Liitä OTG-puhelin lataukseen</string>
+  <string name="cit_rgb_check_blue_light">RGB sininen</string>
+  <string name="cit_rgb_check_green_light">RGB vihreä</string>
+  <string name="cit_rgb_check_red_light">RGB punainen</string>
   <string name="cit_sar_sensor_check_summary">SAR anturikanavien arvot pitäisi näkyä alla. Peitä puhelimen painike, jos tiedot muuttuvat se toimii hyvin. Älä suorita kalibrointia USB-kaapelin ollessa liitettynä!</string>
   <string name="cit_sar_sensor_check_title">SAR Anturi</string>
   <string name="cit_sd_fail">Tapahtui virhe.</string>
@@ -529,6 +533,15 @@ Kun olet laittanut tiedoston \"music.mp3\" SD-kortin hakemistoon, napauta näytt
   <string name="cit_tool_log_toast_generate_bugreport">Luodaan vikailmoitusta… (tämä kestää noin 1 minuutin)</string>
   <string name="cit_tool_mbn_default_notfiy">Oletus MBN</string>
   <string name="cit_tool_mbn_no_default_notfiy">Ei oletus MBN</string>
+  <string name="cit_tool_mbn_opt_help">"Operation instructions:
+1. The steps to activate an MBN:
+Step 1: Select the slot of MBN to be activated, which is usually loaded by double cards, and the default is double cards.
+Step 2: You need to select a name of the MBN to be activated. The commonly used MBN is prefabricated in the drop-down list. If it is not found, you can enter the keyword of the MBN name to be activated in the search box to find the MBN you need to activate.
+Step 3: Click the Activate button to load the selected MBN.
+2. Recovery system default MBN can be achieved by clicking the Restore default MBN button.
+3. It can display the information of MBN loaded in the current Modem.
+The first line shows whether the MBN loaded by the current Modem is the default MBN of the system. (Some products may not be integrated into the relevant interface, this line will show: Not Supported)
+The second line shows the name and version number of Default MBN and Carrier MBN currently loaded in Modem. Our custom loaded MBN is Carrier MBN, SUB0 is card 1, SUB1 is card 2."</string>
   <string name="cit_tool_mbn_path_select_hit">Valitse MBN:n koko polku:</string>
   <string name="cit_tool_mbn_path_select_notice">Etkö löytänyt yläpuolelta? Etsitkö täältä? Esim. mcfg, ct, eps ... jne</string>
   <string name="cit_tool_mbn_recovery_default">Palauta oletus MBN</string>
@@ -556,7 +569,7 @@ Kun olet laittanut tiedoston \"music.mp3\" SD-kortin hakemistoon, napauta näytt
   <string name="cit_tool_nfc_st_stop">Lopeta</string>
   <string name="cit_tool_no_repeat">Ei toistoja!</string>
   <string name="cit_tool_not_support">Ei tuettu</string>
-  <string name="cit_tool_opt_fail_info_notify">Opt epäonnistui, käynnistä puhelin uudelleen ja yritä uudelleen.</string>
+  <string name="cit_tool_opt_fail_info_notify">Opt epäonnistui, puhelin täytyy käynnistää uudelleen.</string>
   <string name="cit_tool_prx_drx">PRx+DRx</string>
   <string name="cit_tool_prx_drx_select_mode">Valitse Tila:</string>
   <string name="cit_tool_prx_drx_select_rat">Valitse RAT:</string>
@@ -941,9 +954,13 @@ Hold the other hand close to the bottom of the phone
 Look at the value of CS0
 The value of CS0 ranges from 3000 to 30000 , the pass button is highlight"</string>
   <string name="sar_sensor_test_description">Sar Sensor Calibrate and Data Collect</string>
+  <string name="sar_sensor_test_err_angle">Puhelin ei ole asetettu oikeaan kulmaan</string>
+  <string name="sar_sensor_test_next_step">Control baffle close to mobile phone</string>
+  <string name="sar_sensor_test_success">Sar-anturin testi onnistui</string>
   <string name="sar_sensor_test_summary">"Rotate the phone, put it to the fixture
 Click the Start Calibrate button
 After calibrate success, control the fixture close and away from the phone"</string>
+  <string name="sar_sensor_test_timeout">Sar-anturin testin aikakatkaisu</string>
   <string name="screen_off_fail_retry">灭屏解锁失败重试次数：</string>
   <string name="screen_on_fail_retry">亮屏解锁失败重试次数：</string>
   <string name="search_menu_title">Search</string>
