--- a/Finnish/main/Contacts.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Contacts.apk/res/values-fi-rFI/strings.xml
@@ -197,6 +197,8 @@
   <string name="composer_has_no_exportable_contact">Vietäviä yhteystietoja ei ole. Jos laitteessasi on yhteystietoja, tietojen tarjoaja on saattanut estää niiden viemisen laitteen ulkopuolelle.</string>
   <string name="composer_not_initialized">vCard-luonti ei käynnistynyt oikein.</string>
   <string name="config_export_file_extension">vcf</string>
+  <string name="confirm_call_log_dial_summary">Kysy vahvistusta ennen puheluiden soittamista puheluhistoriassa, estääkseen vahinkopuhelut.</string>
+  <string name="confirm_call_log_dial_title">Vahvista soitot puheluhistoriasta</string>
   <string name="confirm_delete_contact_all_call_logs">Poistetaanko kaikki puheluhistoriat?</string>
   <string name="confirm_delete_selected_all_call_logs">Poistetaanko kaikki puheluhistoria?</string>
   <string name="confirm_delete_sim_entry_miui_title">Poista</string>
