--- a/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/InCallUI.apk/res/values-fi-rFI/strings.xml
@@ -220,6 +220,7 @@
   <string name="video_conference_caller_info_name">%1$s videokonferenssipuhelu</string>
   <string name="video_crbt_title">Toisen osapuolen videon soittoääni toistetaan</string>
   <string name="voicemail">Vastaaja</string>
+  <string name="volte_call">VoLTE-puhelu</string>
   <string name="volume_boost_text">Parannettiin äänenvoimakkuutta onnistuneesti</string>
   <string name="wait_prompt_str">"Lähetäänkö seuraavat äänet?
 "</string>
